[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Simulation.gd" type="Script" id=1]
[ext_resource path="res://scenes/Mandelbrot.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/background_ui.png" type="Texture" id=3]
[ext_resource path="res://fonts/DroidSansMono.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

size = 12
use_mipmaps = false
use_filter = false
extra_spacing_top = -2
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Resource", "Settings" ]

[node name="Simulation" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Fractals" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 520, 300 )
max_angular_speed = 10.0
angular_acceleration = 10.0
angular_brake = 8.0

[node name="UI" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -9.0
margin_top = -53.0
margin_right = 31.0
margin_bottom = -13.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Focus", "Material" ]
__meta__ = {
"_edit_group_": true
}

[node name="Control" type="CenterContainer" parent="UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 440.0
margin_right = 330.0
margin_bottom = 646.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="UI/Control" index="0"]

modulate = Color( 1, 1, 1, 0.756941 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 10.0
margin_right = 300.0
margin_bottom = 195.0
rect_min_size = Vector2( 300, 185 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
_sections_unfolded = [ "Axis Stretch", "Patch Margin", "Rect", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="VBoxContainer" parent="UI/Control" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 13.0
margin_top = 21.0
margin_right = 286.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 273.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Labels" type="VBoxContainer" parent="UI/Control/HBoxContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 119.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="BranchFactor" type="Label" parent="UI/Control/HBoxContainer/HBoxContainer/Labels" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 119.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Branch factor:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Shear" type="Label" parent="UI/Control/HBoxContainer/HBoxContainer/Labels" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 20.0
margin_right = 119.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Shear:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Details" type="Label" parent="UI/Control/HBoxContainer/HBoxContainer/Labels" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 119.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Details:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="DivergenceLimit" type="Label" parent="UI/Control/HBoxContainer/HBoxContainer/Labels" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 60.0
margin_right = 119.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Divergence limit:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Brightness" type="Label" parent="UI/Control/HBoxContainer/HBoxContainer/Labels" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 119.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Brightness:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Sliders" type="VBoxContainer" parent="UI/Control/HBoxContainer/HBoxContainer" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 123.0
margin_right = 273.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="BranchFactor" type="HSlider" parent="UI/Control/HBoxContainer/HBoxContainer/Sliders" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 2.0
max_value = 13.0
step = 0.05
page = 0.0
value = 4.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 0
_sections_unfolded = [ "Anchor", "Focus", "Margin", "Rect" ]

[node name="Shear" type="HSlider" parent="UI/Control/HBoxContainer/HBoxContainer/Sliders" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 20.0
margin_right = 150.0
margin_bottom = 36.0
rect_min_size = Vector2( 150, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = -2.0
max_value = 2.0
step = 0.25
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 0
_sections_unfolded = [ "Anchor", "Focus", "Margin", "Rect" ]

[node name="Details" type="HSlider" parent="UI/Control/HBoxContainer/HBoxContainer/Sliders" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 150.0
margin_bottom = 56.0
rect_min_size = Vector2( 150, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 5.0
max_value = 50.0
step = 1.0
page = 0.0
value = 25.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 0
_sections_unfolded = [ "Anchor", "Focus", "Rect" ]

[node name="DivergenceLimit" type="HSlider" parent="UI/Control/HBoxContainer/HBoxContainer/Sliders" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 60.0
margin_right = 150.0
margin_bottom = 76.0
rect_min_size = Vector2( 150, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 20.0
max_value = 200.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 0
_sections_unfolded = [ "Anchor", "Focus", "Margin", "Rect" ]

[node name="Brightness" type="HSlider" parent="UI/Control/HBoxContainer/HBoxContainer/Sliders" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 150.0
margin_bottom = 96.0
rect_min_size = Vector2( 150, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.25
max_value = 2.0
step = 0.05
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 0
_sections_unfolded = [ "Anchor", "Focus", "Margin", "Rect" ]

[node name="Color" type="HBoxContainer" parent="UI/Control/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 273.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Label" type="Label" parent="UI/Control/HBoxContainer/Color" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 2.0
margin_right = 42.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Color:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Picker" type="ColorPickerButton" parent="UI/Control/HBoxContainer/Color" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 46.0
margin_right = 91.0
margin_bottom = 20.0
rect_min_size = Vector2( 45, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
color = Color( 0.631373, 0.0431373, 0.0431373, 1 )
edit_alpha = true
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="Rotate" type="HBoxContainer" parent="UI/Control/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 124.0
margin_right = 273.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="UI/Control/HBoxContainer/Rotate" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 12.0
margin_right = 49.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Rotate:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="CheckButton" type="CheckButton" parent="UI/Control/HBoxContainer/Rotate" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 53.0
margin_right = 129.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
_sections_unfolded = [ "Rect" ]

[connection signal="value_changed" from="UI/Control/HBoxContainer/HBoxContainer/Sliders/BranchFactor" to="." method="_on_branch_factor_changed"]

[connection signal="value_changed" from="UI/Control/HBoxContainer/HBoxContainer/Sliders/Shear" to="." method="_on_shear_changed"]

[connection signal="value_changed" from="UI/Control/HBoxContainer/HBoxContainer/Sliders/Details" to="." method="_on_converence_iter_limit_changed"]

[connection signal="value_changed" from="UI/Control/HBoxContainer/HBoxContainer/Sliders/DivergenceLimit" to="." method="_on_divergence_limit_changed"]

[connection signal="value_changed" from="UI/Control/HBoxContainer/HBoxContainer/Sliders/Brightness" to="." method="_on_brightness_changed"]

[connection signal="color_changed" from="UI/Control/HBoxContainer/Color/Picker" to="." method="_on_color_changed"]

[connection signal="toggled" from="UI/Control/HBoxContainer/Rotate/CheckButton" to="." method="_on_rotation_toggled"]


